@@ -132,11 +132,12 @@ class AddEditCards(TipAfterStartingNTimes):
             self.config()["last_used_tags_for_card_type_id"]:
             self.config()["last_used_tags_for_card_type_id"]\
                 [new_card_type.id] = ""
-        if not unicode(self.tags.currentText()) \
-            or self.card_type_widget.is_empty():
-            if not self.config()["is_last_used_tags_per_card_type"]:
+        if not self.config()["is_last_used_tags_per_card_type"]:
+            if not unicode(self.tags.currentText()):
                 self.update_tags_combobox(self.config()["last_used_tags"])
-            else:
+        else:
+            if not unicode(self.tags.currentText()) \
+                or self.card_type_widget.is_empty():
                 self.update_tags_combobox(self.config()\
                     ["last_used_tags_for_card_type_id"][new_card_type.id])
         if self.card_type.fact_keys().issubset(new_card_type.fact_keys()) or \
